cleaned up VDMSL and added VDMSL_FP

--- a/VDMSL_FP/.vscode/launch.json
+++ b/VDMSL_FP/.vscode/launch.json
@@ -1,11 +1,11 @@
 {
   "configurations": [
     {
-      "name": "Lens config: Launch BattleshipSimulator`runTest",
+      "name": "Lens config: Launch DEFAULT`runTest",
       "type": "vdm",
       "request": "launch",
       "noDebug": true,
-      "defaultName": "BattleshipSimulator",
+      "defaultName": "DEFAULT",
       "command": "p runTest()"
     }
   ]
